<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.account.SettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_settings"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:padding="16dp" />

    <TextView
        android:id="@+id/textViewUserEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        tools:text="user@example.com" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/buttonSyncNow"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sync_email_now"
        android:gravity="start|center_vertical"/>

    <Button
        android:id="@+id/buttonManagePermissions"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manage_permissions"
        android:gravity="start|center_vertical"/>
        
    <Button
        android:id="@+id/buttonLogout"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textColor="?attr/colorError"
        android:gravity="start|center_vertical"/>

</LinearLayout>